<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">FormTest</string>
    <string name="action_settings">Settings</string>
    <string name="user_name">Username</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="age">Age</string>
    <string name="save">Save</string>
    <string name="photo">Upload Image</string>
</resources>
