<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.app.MainActivity$PlaceholderFragment">

    <EditText
        android:id="@+id/UserName"
        android:hint="@string/user_name"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/FirstName"
        android:hint="@string/first_name"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/LastName"
        android:hint="@string/last_name"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/ageDisplay"
        android:hint= "@string/age"
        android:layout_marginTop="6dp"
        android:layout_marginBottom="6dp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearance"/>

    <SeekBar
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/Age"
        android:layout_centerVertical="true"
        android:layout_toRightOf="@+id/ageDisplay" />



    <Button
        android:id="@+id/Photo"
        android:text="@string/photo"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:onClick="uploadImage"/>


    <Button
        android:id="@+id/Save"
        android:text="@string/save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</LinearLayout>
